creat function para listar os produtos

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
           </div>        
         </div>
       </nav>
+      <div class="container-fluid">
+        <table id="listTable" class="table">
+          <tbody> </tbody>
+        </table>
+      </div>
 
       <script src="course/js/config.js"></script>
-
-      <h1>hey 2</h1>
+      <script src="course/js/main.js"></script>
+     
 </body>
 </html>
