--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
         </div>
       </nav>
       <div class="container-fluid">
+        <div class="form-inline">
+          <div class="form-group">
+            <input type="text" class="form-control" id="desc" placeholder="Description">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control" id="amount" placeholder="Amount">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control" id="value" placeholder="Value">
+          </div>
+          <button onclick="addData();" class="btn btn-default">Add</button>
+        </div>
         <table id="listTable" class="table">
           <tbody> </tbody>
         </table>
