fução para  validar os  campos da  table

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           </span>
           <button id="btnAdd" onclick="addData();" class="btn btn-default">Add</button>
         </div>
+        <span id="errors"></span>
         <table id="listTable" class="table"></table>
       </div>
 
