--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
             <button onclick="upDateData();" class="btn btn-default">Save</button>
             <button onclick="resetForm();" class="btn btn-default">Cancel</button>
           </span>
-          <button id="btnAdd" onclick="addData();" class="btn btn-default">Add</button>
+          <span id="btnAdd">
+            <button onclick="addData();" class="btn btn-default">Add</button>  
+            <button onclick="resetForm();" class="btn btn-default">Reset</button>
+            <button onclick="deleteList();" class="btn btn-default">Delete List</button>
+          </span>
+          
         </div>
         <span id="errors"></span>
         <table id="listTable" class="table"></table>
       </div>
+      <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <h4 class="text-center text-success">Total: <span id="totalValue">$ 0,00</span></h4>
+        </div>
+    </nav>
 
       <script src="course/js/config.js"></script>
       <script src="course/js/main.js"></script>
